--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,8 @@ SQLAlchemy==2.0.36
 psycopg2-binary==2.9.10
 
 prometheus-client==0.21.1
+
+onnx==1.16.2
+onnxruntime==1.19.2
+skl2onnx==1.18.0
+numpy==2.1.3
